sfdx-source/core/main/schema/objects/at4dx_Configuration__c/at4dx_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration information related to at4dx framework</description>
    <label>at4dx Configuration</label>
</CustomObject>