sfdx-source/core/main/schema/objects/at4dx_Configuration__c/fields/disableTriggersBySObjectName__c.field-meta.xml
<CustomField>
    <fullName>disableTriggersBySObjectName__c</fullName>
    <description>A list of SObject Names ( comma, semi-colon, whitespace or new-line delimited which will be disabled. Below are 3 examples,
   (1) Account, Contact, Lead
   (2) All
   (3) Account

Note, to disable ALL SObject Triggers, use &apos;All&apos;. Names are case IN-SENSITIVE.</description>
    <inlineHelpText>A list of SObject Names ( comma,semi-colon,whitespace or newline delimited which will be disabled. Below are 3 examples,
   (1) Account, Contact, Lead
   (2) All
   (3) Account
Note, to disable ALL SObject Triggers, use &apos;All&apos;. Names are case IN-SENSIT</inlineHelpText>
    <label>Disable Triggers By SObject Name</label>
    <type>TextArea</type>
</CustomField>