sfdx-source/core/main/schema/objects/at4dx_Configuration__c/fields/disableTriggersBySObjectNameContinue__c.field-meta.xml
<CustomField>
    <fullName>disableTriggersBySObjectNameContinue__c</fullName>
    <description>This is overflow in the event one needs additional names. Please note, &apos;All&apos; indicates no sobject triggers will fire</description>
    <inlineHelpText>This is overflow in the event one needs additional names. Please note, &apos;All&apos; indicates no sobject triggers will fire</inlineHelpText>
    <label>Disable Triggers By SObject Name Cont</label>
    <type>TextArea</type>
</CustomField>