sfdx-source/core/main/schema/objects/at4dx_Configuration__c/fields/Is_Tracing__c.field-meta.xml
<CustomField>
    <fullName>Is_Tracing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Tracing turned on (logging information)</description>
    <inlineHelpText>Is Tracing turned on (logging information)</inlineHelpText>
    <label>Is Tracing</label>
    <type>Checkbox</type>
</CustomField>